@@ -372,6 +372,9 @@
                         </executions>
                         <configuration>
                             <quickBuild>true</quickBuild>
+                            <buildArgs>
+                                <arg>--enable-native-access=ALL-UNNAMED</arg>
+                            </buildArgs>
                         </configuration>
                     </plugin>
                 </plugins>
